nav layout correctly aligned and styled

--- a/css/style.css
+++ b/css/style.css
@@ -429,8 +429,10 @@ th {
 /** karma-specific styles
 */
 
+
 body {
 	background-color: LightGray;
+	-webkit-font-smoothing: antialiased;
 }
 
 div {
@@ -472,4 +474,20 @@ div {
 .links > li {
 	display: inline-block;
 	padding-left: 1em;
+}
+
+a:link,
+a:visited {
+	text-decoration: none;
+	color: #838994; 
+}
+
+a:hover {
+	color: red;
+	text-decoration: none;
+}
+
+.top-navigation .links > .active {
+	color: #4c5058;
+	font-weight: 600;
 }
